--- a/Wodsoft.ComBoost.Mvc/Bootstrap/Views/Shared/DateEditor.cshtml
+++ b/Wodsoft.ComBoost.Mvc/Bootstrap/Views/Shared/DateEditor.cshtml
@@ -1,6 +1,9 @@
 ﻿@model MvcEditorModel
+@{
+    DateTime? value = Model.Value as DateTime?;
+}
 <div class="input-group col-md-4">
-    <input type="date" class="form-control" id="@Model.Metadata.ClrName" name="@Model.Metadata.ClrName" value="@(((DateTime)Model.Value).ToShortDateString())" />
+    <input type="date" class="form-control" id="@Model.Metadata.ClrName" name="@Model.Metadata.ClrName" value="@(value.HasValue ? value.Value.ToLongDateString() : "")" @Html.Raw(Model.Metadata.IsRequired ? "" : "required=\"required\"")/>
 </div>
 <script type="text/javascript">
     $('#@Model.Metadata.ClrName').datepicker();
