--- a/Wodsoft.ComBoost.Mvc/Bootstrap/Views/Shared/EnumEditor.cshtml
+++ b/Wodsoft.ComBoost.Mvc/Bootstrap/Views/Shared/EnumEditor.cshtml
@@ -1,13 +1,17 @@
 ﻿@model MvcEditorModel
 @{
     EntityExtension.EnumItem[] items;
+    Type enumType;
     if (Model.Metadata.ClrType.IsGenericType)
     {
-        items = Html.EnumAnalyze(Model.Metadata.ClrType.GetGenericArguments()[0]);
+        enumType = Model.Metadata.ClrType.GetGenericArguments()[0];
+        items = Html.EnumAnalyze(enumType);
+        enumType = Enum.GetUnderlyingType(enumType);
     }
     else
     {
         items = Html.EnumAnalyze(Model.Metadata.ClrType);
+        enumType = Enum.GetUnderlyingType(Model.Metadata.ClrType);
     }
 }
 @if (Model.Metadata.ClrType.GetCustomAttributes(typeof(FlagsAttribute), true).Length == 0)
@@ -19,7 +23,7 @@
         }
         @for (int i = 0; i < items.Length; i++)
         {
-            <option value="@items[i].Value" @Html.Raw(items[i].Value == (int)Model.Value ? " selected=\"selected\"" : "")>@items[i].Name</option>
+            <option value="@items[i].Value" @Html.Raw(object.Equals(items[i].Value, Convert.ChangeType(Model.Value, enumType)) ? " selected=\"selected\"" : "")>@items[i].Name</option>
         }
     </select>
 }
