--- a/Wodsoft.ComBoost.Mvc/Bootstrap/Views/Shared/MultilineTextEditor.cshtml
+++ b/Wodsoft.ComBoost.Mvc/Bootstrap/Views/Shared/MultilineTextEditor.cshtml
@@ -1,2 +1,2 @@
 ﻿@model MvcEditorModel
-<textarea class="form-control" rows="3" id="@Model.Metadata.ClrName" name="@Model.Metadata.ClrName">@Model.Value</textarea>
+<textarea class="form-control" rows="3" id="@Model.Metadata.ClrName" name="@Model.Metadata.ClrName" @Html.Raw(Model.Metadata.IsRequired ? "" : "required=\"required\"")>@Model.Value</textarea>
