--- a/Wodsoft.ComBoost.Mvc/Bootstrap/Views/Shared/NumberEditor.cshtml
+++ b/Wodsoft.ComBoost.Mvc/Bootstrap/Views/Shared/NumberEditor.cshtml
@@ -1,5 +1,5 @@
 ﻿@model MvcEditorModel
-<input type="number" class="form-control" id="@Model.Metadata.ClrName" name="@Model.Metadata.ClrName" value="@Model.Value" step="any"/>
+<input type="number" class="form-control" id="@Model.Metadata.ClrName" name="@Model.Metadata.ClrName" value="@Model.Value" step="any" @Html.Raw(Model.Metadata.IsRequired ? "" : "required=\"required\"")/>
 <script type="text/javascript">
     $('#@Model.Metadata.ClrName').change(function () {
         var number = new Number($(this).val());
