--- a/Wodsoft.ComBoost.Mvc/Bootstrap/Views/Shared/Search.cshtml
+++ b/Wodsoft.ComBoost.Mvc/Bootstrap/Views/Shared/Search.cshtml
@@ -13,7 +13,7 @@
 }
 <ol class="breadcrumb">
     <li><a href="#">Home</a></li>
-    <li><a href="@Url.Action("Index")">@Model.Metadata.Name</a></li>
+    <li><a href="@Html.Raw(Url.Action("Index"))">@Model.Metadata.Name</a></li>
     <li class="active">Search</li>
 </ol>
 <br />
@@ -23,43 +23,43 @@
         <strong class="font-size20">Search @(Model.Metadata.Name)</strong>
     </div>
     <div class="panel-body">
-        <form id="form" class="form-horizontal" role="form" action="@Url.Action("Index")" method="get">
-            @for (int i = 0; i < Model.Properties.Length; i++)
+        <form id="form" class="form-horizontal" role="form" action="@Url.Action(ViewBag.Action)" method="get">
+            @foreach (var property in Model.Properties)
             {
                 <div class="form-group has-feedback">
-                    <label class="col-sm-2 control-label">@Model.Properties[i].Name</label>
+                    <label class="col-sm-2 control-label">@property.Name</label>
                     <div class="col-sm-8">
-                        @{switch (Model.Properties[i].Type)
+                        @{switch (property.Type)
                         {
                             case System.ComponentModel.DataAnnotations.CustomDataType.Date:
                             case System.ComponentModel.DataAnnotations.CustomDataType.DateTime:
                                 <div class="input-group col-md-7">
-                                    <input type="date" class="form-control col-md-3" id="Search.@(Model.Properties[i].ClrName).Start" name="Search.@(Model.Properties[i].ClrName).Start" />
+                                    <input type="date" class="form-control col-md-3" id="Search.@(property.ClrName).Start" name="Search.@(property.ClrName).Start" />
                                     <span class="input-group-addon">To</span>
-                                    <input type="date" class="form-control col-md-3" id="Search.@(Model.Properties[i].ClrName).End" name="Search.@(Model.Properties[i].ClrName).End" />
+                                    <input type="date" class="form-control col-md-3" id="Search.@(property.ClrName).End" name="Search.@(property.ClrName).End" />
                                 </div>
                                 <script type="text/javascript">
-                                    $('#Search.@(Model.Properties[i].ClrName).Start').datepicker();
-                                    $('#Search.@(Model.Properties[i].ClrName).End').datepicker();
+                                    $('#Search.@(property.ClrName).Start').datepicker();
+                                    $('#Search.@(property.ClrName).End').datepicker();
                                 </script>
                                 break;
                             case System.ComponentModel.DataAnnotations.CustomDataType.Currency:
                             case System.ComponentModel.DataAnnotations.CustomDataType.Integer:
                             case System.ComponentModel.DataAnnotations.CustomDataType.Number:
                             <div class="input-group col-md-7">
-                                <input type="number" class="form-control col-md-3" id="Search.@(Model.Properties[i].ClrName).Start" name="Search.@(Model.Properties[i].ClrName).Start" />
+                                <input type="number" class="form-control col-md-3" id="Search.@(property.ClrName).Start" name="Search.@(property.ClrName).Start" />
                                 <span class="input-group-addon">To</span>
-                                <input type="number" class="form-control col-md-3" id="Search.@(Model.Properties[i].ClrName).End" name="Search.@(Model.Properties[i].ClrName).End" />
+                                <input type="number" class="form-control col-md-3" id="Search.@(property.ClrName).End" name="Search.@(property.ClrName).End" />
                             </div>
                             <script type="text/javascript">
-                                $('#Search.@(Model.Properties[i].ClrName).Start').change(function () {
+                                $('#Search.@(property.ClrName).Start').change(function () {
                                     var number = new Number($(this).val());
                                     if (isNaN(number)) {
                                         $(this).val(0);
                                         return;
                                     }
                                 });
-                                $('#Search.@(Model.Properties[i].ClrName).End').change(function () {
+                                $('#Search.@(property.ClrName).End').change(function () {
                                     var number = new Number($(this).val());
                                     if (isNaN(number)) {
                                         $(this).val(0);
@@ -69,19 +69,19 @@
                             </script>
                                 break;
                             case System.ComponentModel.DataAnnotations.CustomDataType.Other:
-                                if (Model.Properties[i].CustomType == "Enum")
+                                if (property.CustomType == "Enum")
                                 {
                                     EntityExtension.EnumItem[] items;
-                                    if (Model.Properties[i].ClrType.IsGenericType)
+                                    if (property.ClrType.IsGenericType)
                                     {
-                                        items = Html.EnumAnalyze(Model.Properties[i].ClrType.GetGenericArguments()[0]);
+                                        items = Html.EnumAnalyze(property.ClrType.GetGenericArguments()[0]);
                                     }
                                     else
                                     {
-                                        items = Html.EnumAnalyze(Model.Properties[i].ClrType);
+                                        items = Html.EnumAnalyze(property.ClrType);
                                     }
-                                    <select name="Search.@Model.Properties[i].ClrName" class="form-control">
-                                        @if (Model.Properties[i].ClrType.IsGenericType)
+                                    <select name="Search.@property.ClrName" class="form-control">
+                                        @if (property.ClrType.IsGenericType)
                                         {
                                             <option value="" selected="selected"></option>
                                         }
@@ -93,25 +93,25 @@
                                 }
                                 else
                                 {
-                                    <input type="text" class="form-control" name="Search.@Model.Properties[i].ClrName" />
+                                    <input type="text" class="form-control" name="Search.@property.ClrName" />
                                 }
                                 break;
                             case System.ComponentModel.DataAnnotations.CustomDataType.Boolean:
-                            <select class="form-control" name="Search.@Model.Properties[i].ClrName">
+                            <select class="form-control" name="Search.@property.ClrName">
                                 <option value="" selected="selected"></option>
                                 <option value="True">Yes</option>
                                 <option value="False">No</option>
                             </select>
                                 break;
                             case System.ComponentModel.DataAnnotations.CustomDataType.Sex:
-                            <select class="form-control" name="Search.@Model.Properties[i].ClrName">
+                            <select class="form-control" name="Search.@property.ClrName">
                                 <option value="" selected="selected"></option>
                                 <option value="True">Male</option>
                                 <option value="False">Female</option>
                             </select>
                                 break;
                             default:
-                            <input type="text" class="form-control" name="Search.@Model.Properties[i].ClrName" />
+                            <input type="text" class="form-control" name="Search.@property.ClrName" />
                                 break;
                         }
                         }
@@ -121,8 +121,8 @@
             <div class="form-group">
                 <div class="col-sm-offset-2 col-sm-10">
                     <input type="submit" class="btn btn-primary" value="Search" />
-                    <a href="@Url.Action("Index")" class="btn btn-default">Back</a>
-                    <input type="hidden" name="search" value="True"/>
+                    <a href="@Html.Raw(Url.Action("Index"))" class="btn btn-default">Back</a>
+                    <input type="hidden" name="search" value="True" />
                 </div>
             </div>
         </form>
