--- a/Samples/Company.Mvc/Views/Shared/Edit.cshtml
+++ b/Samples/Company.Mvc/Views/Shared/Edit.cshtml
@@ -49,7 +49,7 @@
                 <div class="form-group">
                     <label class="col-sm-2 control-label">@property.Name</label>
                     <div class="col-sm-8">
-                        @Html.Editor(property, property.GetValue(Model.Item))
+                        @Html.Editor(Model.Item, property, property.GetValue(Model.Item))
                     </div>
                 </div>
             }
