--- a/Samples/Company.Mvc/Views/Shared/Index.cshtml
+++ b/Samples/Company.Mvc/Views/Shared/Index.cshtml
@@ -79,7 +79,9 @@
                             <tr>
                                 @foreach (var header in Model.Headers)
                                 {
-                                    <td>@EntityValueConverter.GetConverter(header).ConvertToString(header.GetValue(item))</td>
+                                    <td>
+                                        @Html.Viewer(item, header, header.GetValue(item))
+                                    </td>
                                 }
                                 <td class="text-center" style="width: 64px;">
                                     <div class="btn-group btn-group-xs">
