--- a/Wodsoft.ComBoost.Mvc/Bootstrap/Views/Shared/BooleanViewer.cshtml
+++ b/Wodsoft.ComBoost.Mvc/Bootstrap/Views/Shared/BooleanViewer.cshtml
@@ -18,4 +18,7 @@
         throw new NotSupportedException("Boolean editor do not support type \"" + Model.Value.GetType() + "\".");
     }
 }
-@Model.Value
+@if (value != null)
+{
+    @(value.Value ? "Yes" : "No")
+}
