--- a/Wodsoft.ComBoost.Mvc/Bootstrap/Views/Shared/EnumViewer.cshtml
+++ b/Wodsoft.ComBoost.Mvc/Bootstrap/Views/Shared/EnumViewer.cshtml
@@ -1,5 +1,5 @@
 ﻿@model MvcEditorModel
 @{
-    System.Web.Mvc.Converter.EnumConverter converter = new EnumConverter(Model.Metadata.ClrType);
+    EnumConverter converter = new EnumConverter(Model.Metadata.ClrType);
     @converter.ConvertToString(Model.Value)
 }
