--- a/Wodsoft.ComBoost.Mvc/Bootstrap/Views/Shared/SexViewer.cshtml
+++ b/Wodsoft.ComBoost.Mvc/Bootstrap/Views/Shared/SexViewer.cshtml
@@ -18,4 +18,7 @@
         throw new NotSupportedException("Boolean editor do not support type \"" + Model.Value.GetType() + "\".");
     }
 }
-@(Model.Value ? "Male" : "Female")
+@if (value != null)
+{
+    @(value.Value ? "Male" : "Female")
+}
