--- a/src/samples/Wodsoft.ComBoost.Forum/Views/_ViewImports.cshtml
+++ b/src/samples/Wodsoft.ComBoost.Forum/Views/_ViewImports.cshtml
@@ -1,2 +1,2 @@
 ﻿@using Wodsoft.ComBoost.Forum
-@addTagHelper "*, Microsoft.AspNet.Mvc.TagHelpers"
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
