--- a/Samples/Company.Mvc/Views/Shared/SexEditor.cshtml
+++ b/Samples/Company.Mvc/Views/Shared/SexEditor.cshtml
@@ -29,7 +29,7 @@
             <input type="radio" name="@Model.Metadata.ClrName" value="false" @Html.Raw(value.HasValue && value.Value ? "" : "checked=\"checked\"") />Female
         </label>
     </div>
-    @if (Model.Value is bool?)
+    @if (Model.Value == null || Model.Value.GetType() == typeof(bool?))
     {
         <div class="radio-inline">
             <label>
