--- a/src/samples/Wodsoft.ComBoost.Forum/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/src/samples/Wodsoft.ComBoost.Forum/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -11,6 +11,13 @@
         body {
             padding-top: 70px;
         }
+
+        input[type="date"].form-control,
+        input[type="time"].form-control,
+        input[type="datetime-local"].form-control,
+        input[type="month"].form-control {
+            line-height: 1.4285;
+        }
     </style>
 </head>
 <body>
