--- a/src/samples/Wodsoft.ComBoost.Forum/Areas/Admin/Views/_ViewImports.cshtml
+++ b/src/samples/Wodsoft.ComBoost.Forum/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,6 +1,8 @@
 ﻿@using System.ComponentModel;
-@using Wodsoft.ComBoost.Forum
+@using System.Reflection;
+@using Wodsoft.ComBoost.Forum;
 @using Wodsoft.ComBoost.Data.Entity;
+@using Wodsoft.ComBoost.Data.Entity.Metadata;
 @using Wodsoft.ComBoost.Mvc;
 @using Wodsoft.ComBoost.Security;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
